# CO2-Sensor-Zigbee-Rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Co2-Sensor.ino  Co2-Sensor.js  LICENSE  README.md  sketch.yaml
Logo/: CO2-Logo.afdesign
Rust/: Cargo.toml  README.md  bindings.h  partitions.csv  sdkconfig.defaults
Rust/.cargo/: config.toml
Rust/src/: logger.rs  main.rs  version.rs  zigbee.rs
Rust/tools/: read-log.py
