[package]
name = "co2-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal                = { version = "1.0.0-rc.0", features = ["esp32h2", "unstable"] }
esp-hal-embassy  = { version = "0.9.1", features = ["esp32h2"] }
esp-backtrace    = { version = "0.19", features = ["esp32h2", "panic-handler", "println"] }
esp-println      = { version = "0.17", features = ["esp32h2", "log-04"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-time     = "0.4"
log              = "0.4"

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
debug         = false

[profile.dev]
opt-level = "s"
debug     = true
