[package]
name = "co2-sensor"
version = "2.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "co2-sensor"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = { version = "0.51", features = ["critical-section"] }


[build-dependencies]
embuild = "0.33"

# ESP-IDF + Zigbee SDK configuration.
# esp-zigbee-lib / esp-zboss-lib are Espressif's closed-source Zigbee stack,
# pulled in as remote ESP-IDF components; bindgen generates Rust FFI from
# the bindings.h header below.
[package.metadata.esp-idf-sys]
esp_idf_version = "v5.3.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-zigbee-lib", version = "^1.6" }
bindings_header = "bindings.h"
bindings_module = "zb"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-zboss-lib", version = "^1.6" }
